--- a/article.css
+++ b/article.css
@@ -8,6 +8,10 @@
   color: #222222;
   text-align: justify;  
 }
+p {font-size: 22px;
+}
+li {font-size: 22px;
+}
 h1{
   font-family: Calibri, Verdana; 
   font-size: 42px;
@@ -119,4 +123,7 @@ A:hover {
 .post-date {
   color: #8a8a8a;
 }
-
+table {
+  font-size: 20px;
+  border-collapse: collapse;
+}
